--- a/source/template/blocks/user.pug
+++ b/source/template/blocks/user.pug
@@ -1,5 +1,5 @@
 mixin user(modificator)
     .user(class=`user--${modificator}`)
-        .user__photo
+        img.user__photo(src="assets/img/ava.jpg")
         h1.user__name Березин Арсений
         p.user__prof Личный сайт веб разработчика
