--- a/source/template/pages/blog.pug
+++ b/source/template/pages/blog.pug
@@ -12,15 +12,15 @@ block content
         +rightTriangle('blog')
         .section__wrapper.blog__inner
             aside.blog-sidebar
-                ul.blog-sidebar__list.js-blog-list
-                    li.blog-sidebar__item.js-blog-item.blog-sidebar__item--active
-                        a.blog-sidebar__link.js-blog-link Самое важное в SASS
-                    li.blog-sidebar__item.js-blog-item
-                        a.blog-sidebar__link.js-blog-link Приёмы в вёрстке, без которых не обходится ни один сайт
-                    li.blog-sidebar__item.js-blog-item
-                        a.blog-sidebar__link.js-blog-link Что такое Flexbox?
-                    li.blog-sidebar__item.js-blog-item
-                        a.blog-sidebar__link.js-blog-link Антигерой CSS-разметки — свойство «display: table»
+                ul.blog-sidebar__list.js-blog-sidebar__list
+                    li.blog-sidebar__item.js-blog-sidebar__item.blog-sidebar__item--active
+                        a.blog-sidebar__link Самое важное в SASS
+                    li.blog-sidebar__item.js-blog-sidebar__item
+                        a.blog-sidebar__link Приёмы в вёрстке, без которых не обходится ни один сайт
+                    li.blog-sidebar__item.js-blog-sidebar__item
+                        a.blog-sidebar__link Что такое Flexbox?
+                    li.blog-sidebar__item.js-blog-sidebar__item
+                        a.blog-sidebar__link Антигерой CSS-разметки — свойство «display: table»
             article.blog-article
                 .blog-article__item
                     +blockTitle('Самое важное в SASS','','blog')
