--- a/source/style/blocks/_card.scss
+++ b/source/style/blocks/_card.scss
@@ -1,19 +1,20 @@
 .card {
   background-color: rgba(#122620, .6);
-  transition: 0.6s;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 5px;
-  position: relative;
-  width: 394px;
-  height: 426px;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 5px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 5px;
+  height: 426px;
+  position: relative;
+  transition: 0.6s;
+  width: 394px;
 }
 
 .card__wrapper {
     display: block;
     margin: auto;
     overflow: hidden;
+    padding-top: 55px;
     text-align: center;
 
     &--active .card{
@@ -21,14 +22,21 @@
     }
   }
 
+.card__nav {
+  position: absolute;
+  bottom: 0;
+  left:0;
+  right:0;
+}
+
 .card__welcome, .card__auth {
     backface-visibility: hidden;
     @include centered(full);
   }
 
 .card__welcome {
-    z-index: 2;
     transform: rotateY(0deg);
+    z-index: 2;
   }
 
 .card__auth {
@@ -41,8 +49,8 @@
   }
 
 .card__content-text {
-  font-weight: $hardWeight;
   color: rgba($white, .8);
+  font-weight: $hardWeight;
   margin-bottom: 20px;
 }
 
