--- a/source/style/blocks/_footer.scss
+++ b/source/style/blocks/_footer.scss
@@ -108,4 +108,7 @@
 .footer-index {
   display: flex;
   justify-content: center;
+  position: absolute;
+  bottom: 40px;
+  @include centered(x)
 }
