--- a/source/template/blocks/mixins.pug
+++ b/source/template/blocks/mixins.pug
@@ -1,10 +1,18 @@
 mixin ul (className, modificator, items)
-    ul(class=`${className} ${className}--${modificator}`)
-        each link, item in items
-            li(class=`${className}__item`)
-                a(class=`${className}__link` href=`${link}` target='_blank')
-                    svg(class=`${className}__icon ${className}__icon--${item}`)
-                        use(xlink:href="assets/img/sprite.svg#" + item)
+        if modificator
+            ul(class=`${className} ${className}--${modificator}`)
+                each link, item in items
+                    li(class=`${className}__item`)
+                        a(class=`${className}__link` href=`${link}` target='_blank')
+                            svg(class=`${className}__icon ${className}__icon--${item}`)
+                                use(xlink:href="assets/img/sprite.svg#" + item)
+        else
+            ul(class=`${className}`)
+                each link, item in items
+                    li(class=`${className}__item`)
+                        a(class=`${className}__link` href=`${link}` target='_blank')
+                            svg(class=`${className}__icon ${className}__icon--${item}`)
+                                use(xlink:href="assets/img/sprite.svg#" + item)
 
 mixin nav(className, items)
     nav(class=`${className}`)
