--- a/source/template/pages/works.pug
+++ b/source/template/pages/works.pug
@@ -23,8 +23,7 @@ block content
                                     use(xlink:href="assets/img/sprite.svg#link")
 
             .works__col--right
-                .works__wrapper.works-slider
-                .works__wrapper--right
+                .works__wrapper.works-slider.works__wrapper--right
                     .works-slider__image-wrapper
                         .works-slider__image(style='background-image: url(assets/img/work-1.png)')
                     ul.works-slider-list
@@ -75,8 +74,8 @@ block content
                     'Ваше сообщение': 'textarea'
                 })
             .feedback-buttons
-                button.feedback-button.feedback-button--send Отправить
-                button.feedback-button.feedback-button--clear Очистить
+                button.feedback-button.feedback-button--send(type='submit') Отправить
+                button.feedback-button.feedback-button--clear(type='button') Очистить
         +arrow('feedback')
 block footer
     +footer()
