поправил arrow и блоки в about

--- a/source/style/blocks/_header.scss
+++ b/source/style/blocks/_header.scss
@@ -1,6 +1,6 @@
 .header {
   background: url('../img/bg-header.png') no-repeat center/cover;
-  height: 600px;
+  height: 100vh;
   position: relative;
   width: 100%;
 
