--- a/source/template/pages/blog.pug
+++ b/source/template/pages/blog.pug
@@ -7,7 +7,7 @@ block variables
 
 block content
     +header-blog()
-    section.section.blog
+    section.section.blog.js-section-content
         +leftTriangle('blog')
         +rightTriangle('blog')
         .section__wrapper.blog__inner
