Добавил адаптив для главной страницы, для header и начал делать для страницы работ

--- a/source/style/blocks/_card.scss
+++ b/source/style/blocks/_card.scss
@@ -17,6 +17,10 @@
     padding-top: 55px;
     text-align: center;
 
+    @include phones() {
+      padding-top: 35px;
+    }
+
     &--active .card{
       transform: rotateY(180deg);
     }
