--- a/source/style/blocks/_block-title.scss
+++ b/source/style/blocks/_block-title.scss
@@ -22,6 +22,14 @@
     max-width: 320px;
     display: inline-block;
     margin: 0 auto;
+  
+  @include tablets() {
+    font-size: 30px;
+  }
+  
+  @include phones() {
+    font-size: 21px;
+  }
 }
 
 .block-title--line {
@@ -42,7 +50,7 @@
     }
 
     &:after {
-      background: $sectionTitleColor;
+      background: $blockTitleColor;
       content: '';
       height: 3px;
       left: 50%;
