--- a/source/style/blocks/_header.scss
+++ b/source/style/blocks/_header.scss
@@ -1,8 +1,27 @@
 .header {
-  background: url('../img/bg-header.png') no-repeat center/cover;
   height: 100vh;
   position: relative;
   width: 100%;
+
+  @include desctop() {
+    min-height: 620px;
+    height: auto;
+  }
+
+  @include tablets() {
+    min-height: 515px;
+  }
+}
+
+.header-background {
+  @include centered(full);
+  z-index:0;
+  height: 1280px;
+  overflow: hidden;
+
+  @include tablets() {
+    height: 660px;
+  }
 
   &:after {
     background-image: linear-gradient(to top, rgba(2, 2, 2, 0) 0%, rgba(0, 0, 0, 0.35) 100%);
@@ -15,10 +34,28 @@
   }
 }
 
+.header-background__img {
+  max-width: 180%;
+  display: block;
+  margin: 0 auto;
+  min-width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+
+  @include tablets() {
+    height: 100%;
+  }
+}
+
 .header__inner {
     z-index: 2;
     padding: 30px;
+
+  @include tablets() {
+    padding: 29px 29px 29px 30px;
   }
+}
 
 .header__portfolio,
 .header__blog {
@@ -29,10 +66,13 @@
     width: 100%;
     opacity: .13;
     fill: $white;
-    top: -37px;
     left: 0;
     right: 0;
     z-index: -1;
+
+    @include phones() {
+      display: none;
+    }
   }
 .header__content {
     width: 100%;
