--- a/source/style/blocks/_reviews-section.scss
+++ b/source/style/blocks/_reviews-section.scss
@@ -27,14 +27,32 @@
   max-width: 800px;
   width: 100%;
 
+  @include tablets() {
+    margin-bottom: 48px;
+  }
+
+  @include phones() {
+    flex-direction: column;
+    margin-bottom: 35px;
+  }
 
 }
 
 .reviews__item {
   list-style: none;
-  margin-right: 25px;
-  width: 48%;
+  margin-right: 2%;
+  width: 49%;
   position: relative;
+
+  @include phones() {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 35px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
 
   &:before {
     content: '';
@@ -65,6 +83,11 @@
   max-width: 77px;
   max-height: 77px;
   margin-bottom: 20px;
+
+  @include phones() {
+    max-width: 50px;
+    max-height: 50px;
+  }
 }
 
 
@@ -75,6 +98,11 @@
   font-style: italic;
   line-height: 1.6;
   margin-bottom: 29px;
+
+  @include tablets() {
+     font-size: 0.875rem;
+     margin-bottom: 15px;
+  }
 }
 
 .reviews-person__info {
