--- a/source/style/helpers/_settings.scss
+++ b/source/style/helpers/_settings.scss
@@ -9,14 +9,19 @@
 html {
 	height: 100%;
 	width: 100%;
+	font-size: 16px;
+
 	-webkit-font-smoothing: antialiased;
-	-moz-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	-o-font-smoothing: antialiased;
 	font-smoothing: antialiased;
+
+	@include tablets() {
+		font-size: 15px;
+	}
+
+	@include  phones() {
+		font-size: 14px;
+	}
 }
-
-
 
 h1,
 h2,
@@ -64,8 +69,7 @@ button {
 	padding: 0;
 	position: relative;
 	width: 100%;
-	//display: table;
-	height: 100%;;
+	height: 100%;
 }
 
 
