--- a/source/style/pages/_works.scss
+++ b/source/style/pages/_works.scss
@@ -9,18 +9,31 @@
 
 .works__content {
   display: flex;
+
+  @include tablets() {
+    flex-direction: column;
+  }
 }
 
 .works__col--left {
   background-color: #ebefe2;
   position: relative;
   width: 50%;
+
+  @include tablets() {
+    display: flex;
+    width: 100%;
+  }
 }
 
 .works__col--right {
   background-color: #e1e4d7;
   position: relative;
   width: 50%;
+
+  @include tablets() {
+    width: 100%;
+  }
 }
 
 .works__wrapper {
@@ -30,35 +43,44 @@
 .works__wrapper--left {
   margin-left: auto;
   padding: 20px;
+
+  @include tablets() {
+    width: 100%;
+    padding: 45px 20px 60px;
+    align-self: flex-start;
+  }
 }
 
 .works__wrapper--right {
   margin-right: auto;
 }
 
-.leaf1 {
+.leaf {
   position: absolute;
+  z-index: 0;
+
+  @include tablets() {
+    display: none;
+  }
+}
+
+.leaf1 {
   width: 58px;
   height: 108px;
   top: 655px;
   left: 172px;
-  z-index: 1;
 }
 
 .leaf2 {
-  position: absolute;
   width: 99px;
   height: 91px;
   top: 82px;
   left: 37px;
-  z-index: 1;
 }
 
 .leaf3 {
-  position: absolute;
   width: 141px;
   height: 120px;
   top: 521px;
   right: 6px;
-  z-index: 1;
 }
