--- a/source/template/blocks/header.pug
+++ b/source/template/blocks/header.pug
@@ -2,6 +2,8 @@ include hamburger
 
 mixin header(svgName)
     section.section.header
+        .header-background
+            img.header-background__img.js-header-background__img(src='assets/img/bg-header.png')
         .section__wrapper.header__inner
             +ul('social', 'header',
             {
