--- a/source/template/pages/works.pug
+++ b/source/template/pages/works.pug
@@ -16,7 +16,7 @@ block content
                 .works__col--left
                     .works__wrapper.works__wrapper--left
                         .work
-                            +blockTitle('Сайт школы онлайн Образования','line')
+                            +blockTitle('Сайт школы онлайн Образования','line', '')
                             p.work__technologies HTML , CSS, JAVASCRIPT
                             a.work__link(href='https://www.loftschool.com' target='_blank')
                                 span.work__link-text Посмотреть сайт
@@ -40,9 +40,9 @@ block content
                                         use(xlink:href="assets/img/sprite.svg#arrow_down")
 
         section.section.reviews
-            img(src="assets/img/leaf1.png" alt="leaf 1").leaf1
-            img(src="assets/img/leaf2.png" alt="leaf 2").leaf2
-            img(src="assets/img/leaf3.png" alt="leaf 3").leaf3
+            img(src="assets/img/leaf1.png" alt="leaf 1").leaf.leaf1
+            img(src="assets/img/leaf2.png" alt="leaf 2").leaf.leaf2
+            img(src="assets/img/leaf3.png" alt="leaf 3").leaf.leaf3
             .reviews-background
                 img.reviews-background__img(src="assets/img/bg-works.png")
             +sectionTitle('about_header', 'Что обо мне говорят', 'reviews')
