--- a/source/style/blocks/_footer.scss
+++ b/source/style/blocks/_footer.scss
@@ -2,6 +2,7 @@
   background: rgba($sectionTitleColor, .85);
   bottom: $copyrightHeight;
   display: flex;
+  flex-wrap: nowrap;
   height: $footerHeight;
   justify-content: space-between;
   left: 0;
@@ -11,13 +12,61 @@
   width: 100%;
   z-index: 10;
 
+  @include tablets() {
+    padding: 29px 43px 27px 25px;
+    height: auto;
+    flex-flow: row wrap;
+  }
+
+  @include phones() {
+    padding: 19px 10px 17px;
+    flex-direction: column;
+
+  }
+
   &__item {
     display: inline-flex;
     flex-grow: 1;
     max-width: 400px;
     position: relative;
     width: 100%;
-    
+
+    @include tablets() {
+      flex: 1 1 50%;
+      max-width: 100%;
+      margin-bottom: 54px;
+
+      &:nth-child(2) {
+        padding-left: 30px;
+
+        &:after {
+          content: none;
+        }
+      }
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+
+    @include phones() {
+      text-align: center;
+      padding-bottom: 17px;
+      border-bottom: 1px solid rgba($white, 0.2);
+      margin-bottom: 17px;
+      justify-content: center;
+
+      &:nth-child(2) {
+        padding-left: 0px;
+      }
+
+      &:last-child {
+        border-bottom: none;
+        padding-bottom: 0;
+        margin-bottom: 0;
+      }
+    }
+
     &:after {
       background: rgba($white, 0.2);
       content: "";
@@ -25,6 +74,10 @@
       position: absolute;
       right: 0;
       width: 1px;
+
+      @include phones() {
+        content: none;
+      }
     }
 
     &:last-child:after {
@@ -33,15 +86,37 @@
 
     &--left {
       padding-right: 68px;
+      
+      @include phones() {
+        padding-right: 0;
+      }
     }
 
     &--center {
       display: flex;
       flex-direction: column;
+
+      @include phones() {
+        align-items: center;
+        padding-left: 0;
+      }
     }
 
     &--right {
       display: block;
+
+      @include tablets() {
+        display: flex;
+        flex-flow: column wrap;
+      }
+
+      @include phones() {
+        line-height: 1.5;
+        align-self: center;
+        text-align: center;
+        text-align: -webkit-center;
+        max-width: 90%;
+      }
     }
   }
 
@@ -51,6 +126,14 @@
     font-size: $middleFont;
     font-weight: $lightWeight;
     line-height: 1.5;
+
+    @include tablets() {
+      font-size: 14px;
+    }
+
+    @include phones() {
+      font-size: 1rem;
+    }
   }
 
   &-nav {
@@ -58,15 +141,26 @@
     width: 100%;
     margin-bottom: 27px;
 
+    @include phones() {
+      margin-bottom: 20px;
+    }
+
     &__list {
+      list-style: none;
       display: flex;
       justify-content: flex-start;
+      flex-wrap: wrap;
+
+      @include phones() {
+        justify-content: center;
+      }
     }
 
     &__item {
-      display: inline-flex;
+      //display: inline-flex;
       flex-grow: 1;
-      margin-left: 20px;
+      
+
 
       &:first-child {
         margin-left: 0;
@@ -80,6 +174,14 @@
       font-weight: $mediumWeight;
       line-height: 1.5;
       transition: all $transition-time;
+
+      @include tablets() {
+        font-size: 14px;
+      }
+
+      @include phones() {
+        font-size: 1rem;
+      }
 
       &:hover {
         opacity: .5;
@@ -97,10 +199,29 @@
 
     &-text {
       font-weight: $lightWeight;
+
+      @include tablets() {
+        font-size: 14px;
+        display: inline-flex;
+        flex: 1 1 auto;
+      }
+
+      @include phones() {
+        font-size: 1rem;
+      }
     }
 
     &-author {
       font-weight: $hardWeight;
+      @include tablets() {
+        font-size: 14px;
+        display: inline-flex;
+        flex: 1 1 auto;
+      }
+      @include phones() {
+        font-size: 1rem;
+      }
+
     }
   }
 }
