--- a/source/style/blocks/_social-icons.scss
+++ b/source/style/blocks/_social-icons.scss
@@ -24,8 +24,8 @@
   }
 
 .social__icon {
-  max-height: 22px;
-  max-width: 31px;
+  height: 22px;
+  width: 31px;
   opacity: .5;
   vertical-align: top;
   fill: #ffffff;
@@ -78,9 +78,25 @@
 
 //-Style for social icons in section footer
 .social--footer {
+  align-items: center;
   .social__icon {
     fill: $white;
     opacity: .5;
+
+    @include phones() {
+      width: 31px;
+      height: 17px;
+
+      &--github {
+        width: 26px;
+        height: 22px;
+      }
+
+      &--in {
+        width: 24px;
+        height: 22px;
+      }
+    }
 
     &:hover {
       fill: $white;
