--- a/source/template/blocks/header-blog.pug
+++ b/source/template/blocks/header-blog.pug
@@ -1,5 +1,7 @@
 mixin header-blog()
     section.section.header.header--blog
+        .header-background
+            img.header-background__img.js-header-background__img(src='assets/img/bg-header.png')
         .section__wrapper
             +ul('social', 'header',
             {
@@ -15,3 +17,4 @@ mixin header-blog()
                         use(xlink:href="assets/img/sprite.svg#blog_header")
                     h2.section-title__text Блог
                     p.section-title__subtext Статьи которые я написал
+            +arrow('blog')
